General design updated with panels and responsive features

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -201,3 +201,10 @@ html, body {
 
 /* ================================================
    ================ FIN TEXTOS ==================== */
+
+#cuerpo{
+	padding-top: 0em;
+	padding-bottom: 60px;
+	min-height: 100%;
+	position: relative;
+}
