--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<% devise_error_messages! %>
+
 <div class="container">
     <div class="row">
         <div class=></div>
@@ -7,7 +9,6 @@
             <div class="well">
               <div class="container-fluid">
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-                  <%= devise_error_messages! %>
               <!--
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
