--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,12 +56,13 @@
 	</div>
 
 </body>
-
+<!--
 <footer>
   <div class="container">
-    Julián Ailán 2015
+    <nombre del grupo> 2015
   </div>
 </footer>
+-->
 <script src="//railsgirls.com/assets/bootstrap.js"></script>
 
 </html>
