--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,10 @@
         <div class=></div>
     	<div class="col-md-6">
             <div class="well">
-    		  <h3>Noticias</h3>
-              
+    		  <h3>Bienvenid@s</h3>
+              <p>El objetivo de este sitio es poder compartir información de la carrera. Información tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
+              <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
+              <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
             </div>
     	</div>
     	<div class="col-md-6">
@@ -21,26 +23,3 @@
     	</div>
     </div>
 </div>
-
-<!--
-<a href="#" class="btn btn-lg btn-success"
-   data-toggle="modal"
-   data-target="#basicModal">Click to open Modal</a>
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <h3>Modal Body</h3>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-    </div>
-  </div>
-</div>
--->
