Small header modification and creation of 'pages#show' view. Change of color in panel headings

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,21 +3,21 @@
         <div class=></div>
     	<div class="col-md-6">
             <div class="well">
-    		  <h3>Bienvenid@s</h3>
-              <p>El objetivo de este sitio es poder compartir información de la carrera. Información tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
+    		  <h3 class="destacado" style="padding-bottom:0.5em">Bienvenid@s</h3>
+              <p>El objetivo de este sitio es poder compartir información de la carrera, tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
               <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
               <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
             </div>
     	</div>
     	<div class="col-md-6">
             <div class="well">
-                <h3>Sitios de interés</h3>
-                <ul style="list-style-type:none">
-    		      <li><a href="https://www.guarani-infoinge.unlp.edu.ar" target="_blank">SIU Facultad de Informática-Ingeniería</a></li>
-                  <li><a href="http://163.10.22.53/ingenieria/sitio/planEstudio_2011.html" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
-                  <li><a href="http://www.ing.unlp.edu.ar" target="_blank">Facultad de Ingeniería</a></li>
-                  <li><a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática</a></li>
-                  <li><a href="https://webunlp.ead.unlp.edu.ar/index.php" target="_blank">WebUnlp</a></li>
+                <h3 class="destacado" style="padding-bottom:0.5em">Sitios de interés</h3>
+                <ul class="list-group negrita" style="list-style-type:none">
+    		          <li class="list-group-item"><a href="https://www.guarani-infoinge.unlp.edu.ar" target="_blank">SIU Guaraní</a></li>
+                  <li class="list-group-item"><a href="http://163.10.22.53/ingenieria/sitio/planEstudio_2011.html" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
+                  <li class="list-group-item"><a href="http://www.ing.unlp.edu.ar" target="_blank">Facultad de Ingeniería - Sitio oficial</a></li>
+                  <li class="list-group-item"><a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática - Sitio oficial</a></li>
+                  <li class="list-group-item"><a href="https://webunlp.ead.unlp.edu.ar/index.php" target="_blank">WebUNLP</a></li>
                 </ul>
             </div>
     	</div>
