--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,6 @@
 
 <div class="container">
     <div class="row">
-        <div class=></div>
       <div class="col-md-3 col-xs-3">
       </div>
       <div class="col-md-6 col-xs-6">
@@ -28,7 +27,7 @@
                   </div>
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
-                    <div class="col-xs-8 col-md-8"><%= f.password_field :password, autocomplete: "off", class:"form-control" %></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :password, autocomplete: "off", class:"form-control", :required => "required" %></div>
                   </div>
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
@@ -36,7 +35,7 @@
                   </div>
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
-                    <div class="col-xs-8 col-md-8"><%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", :required => "required" %></div>
                   </div>
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
@@ -44,7 +43,7 @@
                   </div>
                   <div class="row">
                     <div class="col-xs-1 col-md-1"></div>
-                    <div class="col-xs-8 col-md-8"><%= f.password_field :current_password, autocomplete: "off", class:"form-control" %></div></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :current_password, autocomplete: "off", class:"form-control", :required => "required" %></div></div>
                   </div>
                   <div class="row" style="padding-top:1em">
                     <div class="col-xs-1 col-md-1"></div>
