--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand hvr-bounce-in" href="/">Ingeniería en Computación - UNLP</a>
+	      <a class="navbar-brand hvr-bounce-in negrita" href="/">Ingeniería en Computación - UNLP</a>
 	    </div>
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
@@ -29,7 +29,7 @@
 	        <li><a href="/pages/info"  class="hvr-wobble-horizontal">Contacto</a></li>
 	        <p class="navbar-text pull-right">
 	        <% if user_signed_in? %>
-	          Sesión iniciada bajo: <strong><%= current_user.email %></strong>.
+	          <strong><%= current_user.email %></strong>.
 	          <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
 	          <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 	        <% else %>
