--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Pages#show</h1>
-<p>Find me in app/views/pages/show.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class=></div>
+      <div class="col-md-3 col-xs-3">
+      </div>
+      <div class="col-md-6 col-xs-6">
+            <div class="well">
+              <div class="container-fluid">
+              		<center><h3 class="negrita" style="padding-bottom:1em">Contacto</h3></center>
+              		<ul class="list-group">
+              			<li class="list-group-item negrita">Ailán, Julián</li>
+                    <center style="padding-top:1em;padding-bottom:1em;">
+                      <div><a href="/" class="negrita" style="color: #3A5795">Facebook</a></div>                      
+                      <div><a href="/" class="negrita" style="color: #f26161">Google+</a></div>
+                      <div class="negrita">(mail de Juli acá)</div>
+                      <div class="italica">Resta configurar cuentas de Juli</div>
+                    </center>
+              			<li class="list-group-item negrita">Hourquebie, Lucas</li>
+                    <center style="padding-top:1em;padding-bottom:1em;">
+                      <div><a href="https://www.facebook.com/lucashour" class="negrita" style="color: #3A5795">Facebook</a></div>                      
+                      <div><a href="https://plus.google.com/+LucasHourquebie/posts" class="negrita" style="color: #f26161">Google+</a></div>
+                      <div class="negrita">lucashour1993@gmail.com</div>
+                    </center>
+              		</ul>
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
