--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -7,7 +7,7 @@
       <div class="panel panel-personal">
         <div class="panel-heading">
           <div class="panel-title">
-            <center><h3 class="negrita">Nueva materia</h3></center>
+            <center><h3 class="negrita wfont sombra">Nueva materia</h3></center>
           </div>
         </div>
         <div class="panel-body">
