Subject's show title color changed, admins' data configured.

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -15,15 +15,14 @@
                   <ul class="list-group">
                     <li class="list-group-item negrita">Ailán, Julián</li>
                     <center style="padding-top:1em;padding-bottom:1em;">
-                      <div><a href="/" class="negrita" style="color: #3A5795">Facebook</a></div>                      
-                      <div><a href="/" class="negrita" style="color: #f26161">Google+</a></div>
-                      <div class="negrita">(mail de Juli acá)</div>
-                      <div class="italica">Resta configurar cuentas de Juli</div>
+                      <div><a href="https://www.facebook.com/tulians" class="negrita" style="color: #3A5795" target="_blank">Facebook</a></div>
+                      <div><a href="https://plus.google.com/+JuliánAilán/posts" class="negrita" style="color: #f26161" target="_blank">Google+</a></div>
+                      <div class="negrita">julianailan@outlook.com</div>
                     </center>
                     <li class="list-group-item negrita">Hourquebie, Lucas</li>
                     <center style="padding-top:1em;padding-bottom:1em;">
-                      <div><a href="https://www.facebook.com/lucashour" class="negrita" style="color: #3A5795">Facebook</a></div>                      
-                      <div><a href="https://plus.google.com/+LucasHourquebie/posts" class="negrita" style="color: #f26161">Google+</a></div>
+                      <div><a href="https://www.facebook.com/lucashour" class="negrita" style="color: #3A5795" target="_blank">Facebook</a></div>                      
+                      <div><a href="https://plus.google.com/+LucasHourquebie/posts" class="negrita" style="color: #f26161" target="_blank">Google+</a></div>
                       <div class="negrita">lucashour1993@gmail.com</div>
                     </center>
                   </ul>
