--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-8">
         <div class="panel panel-personal">
           <div class="panel-heading">
-            <center><h3 class="panel-title"><span class="negrita"><%= @subject.name %> | Código: </span><%= @subject.code %></h3></center>
+            <center><h3 class="panel-title blanca"><span><%= @subject.name %> | Código: </span><%= @subject.code %></h3></center>
           </div>
           <div class="panel-body">
             <!--<%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %> -->
